--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.3.0",
+    "react-addons-create-fragment": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-linked-state-mixin": "^15.3.0",
+    "react-addons-perf": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-addons-transition-group": "^15.3.0",
+    "react-addons-update": "^15.3.0",
     "react-bootstrap": "^0.30.1",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-mounter": "^1.2.0"
   }
 }
