--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "accounts": "0.0.5",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.3.0",
     "react-addons-create-fragment": "^15.3.0",
